--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="about-me">
 					<h4>More about me</h4>
 
-					<p>I build new projects just to tickle my brain and love learning new technolagies</p>
+					<p>I build new projects just to tickle my brain and love learning new technology</p>
 
 					<p>I still take interviews in search of a great team & projects that interest me.</p>
 
