--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
         <a href=""></a>
 			<h3 style="text-align: center;">Get In Touch</h3>
 
-			<form id="contact-form">
+			<form id="contact-form" action="https://formsubmit.co/ashiqtm1996@gmail.com" method="POST">
 				<a name="contact"></a>
 
 				<label>Name</label>
-				<input class="input-field" type="text" name="name">
+				<input class="input-field" type="text" name="name" required>
 
 				<label>Subject</label>
-				<input class="input-field" type="text" name="subject">
+				<input class="input-field" type="text" name="subject" required>
 
 				<label>Email</label>
-				<input class="input-field" type="text" name="email">
+				<input class="input-field" type="email" name="email" required>
 
 				<label>Message</label>
 				<textarea class="input-field" name="message"></textarea>
